<resources>
    <string name="app_name">啄木鸟运维</string>



    <string name="action_settings">设置</string>

    <string name="select_mode">选择模式</string>
    <string name="mode_single">单选</string>
    <string name="mode_multi">多选</string>
    <string name="max_select_amount">最大选择数量</string>
    <string name="hint_default_amount">默认数量为9</string>
    <string name="enable_camera">是否启用照相机</string>
    <string name="enable">是</string>
    <string name="disable">否</string>
    <string name="go_select">图片选择</string>
    <string name="index_btn1">报修\n400-138-0089</string>
    <string name="index_btn2">维修\n进度查询</string>
    <string name="index_btn3">业务\n咨询</string>
    <string name="index_btn4">了解\n啄木鸟运维</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="login">登录</string>
    <string name="no_register">还没有注册啄木鸟</string>
    <string name="q_register">快速注册</string>
    <string name="q_login">立即登录</string>
    <string name="register">注册</string>
    <string name="input_login_name">请输入用户名</string>
    <string name="login_notifi">请输入用户名(注册后不能修改)</string>
    <string name="login_price">请输入打款金额</string>
    <string name="input_order_num">请输入订单编号</string>
    <string name="select_kefu">请选择客服</string>
    <string name="login_notifi_pass">请输入密码</string>
    <string name="input_new_pass">请输入新的密码</string>
    <string name="login_notifi_pass2">请确认密码</string>
    <string name="input_old_pass">请输入原始密码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_mail">请输入电子邮箱</string>
    <string name="input_code">请输入验证码</string>
    <string name="v_code">验证码</string>
    <string name="sign_type">签约类型</string>
    <string name="sign_no">未签约</string>
    <string name="signed">已签约</string>
    <string name="select_sign_unit">请选择签约单位</string>
    <string name="input_notify_word">请输入提示语</string>
    <string name="ok">确定</string>
    <string name="logout">退出登录</string>
    <string name="input_contact">请输入联系方式</string>
    <string name="input_loc">请填写故障房间位置</string>
    <string name="input_dec">请输入故障描述</string>
    <string name="submit">提交</string>
    <string name="search_area">输入您所在的地区</string>

    <string name="user_name">用户名称:</string>
    <string name="server_name">客服名称:</string>
    <string name="xunjian_time">起始时间:</string>
    <string name="xunjian_status">巡检状态:</string>
    <string name="prp_name">项目名称:</string>
    <string name="repair_no">维修单号:</string>
    <string name="contact_no">联系方式:</string>
    <string name="repair_loc">故障位置:</string>
    <string name="customer_contact_no">客户联系方式</string>
    <string name="repair_loc2">故障位置</string>
    <string name="repair_des">故障描述</string>
    <string name="details_des">详情描述</string>
    <string name="solution_method">解决方案</string>
    <string name="order_type">订单类别</string>
    <string name="belong_object">所属项目</string>
    <string name="order_type_system">订单类型(系统类型)</string>
    <string name="repair_man">维修人员</string>
    <string name="report_time">报单时间</string>
    <string name="repair_history">维修记录</string>
    <string name="order_num">订单编号</string>
    <string name="order_status">订单状态</string>
    <string name="close_order">关闭订单</string>
    <string name="pai_order">派单</string>
    <string name="repair_price">维修价格</string>
    <string name="input_repair_price">请输入维修价格</string>
    <string name="select_repater">请选择维修人员</string>
    <string name="input_notiy_word">请输入提示语</string>
    <string name="repaing">解决中</string>
    <string name="need_change">需更换</string>
    <string name="project_name">设备名称</string>
    <string name="input_project_name">请输入设备名称</string>
    <string name="input_jiejue">请输入解决方案</string>
    <string name="input_project_type">请输入设备型号</string>
    <string name="input_price">请输入维修价格</string>
    <string name="input_complain">请输入您宝贵的建议</string>
    <string name="input_replay_content">请输入回复内容</string>
    <string name="input_comment">请输入评价内容</string>
    <string name="item_name">项目名称</string>
    <string name="add_time">添加时间</string>

    <string name="my_repair_list">我的维修单</string>
    <string name="submit_repair">提交维修单</string>
    <string name="user_info">用户信息</string>
    <string name="update_pass">修改密码</string>
    <string name="fukuan">付款凭证</string>
    <string name="about_us">关于我们</string>
    <string name="xunjian">巡检</string>
    <string name="order_count">订单统计</string>

    <string name="username">用户名称</string>
    <string name="email">邮箱</string>
    <string name="phone">联系电话</string>
    <string name="register_time">注册时间</string>
    <string name="com_name">单位名称</string>
    <string name="p_name">项目名称</string>
    <string name="job_type">岗位等级</string>
    <string name="sub_count">提交维修单总数</string>
    <string name="sub_finish">完成维修单数量</string>
    <string name="sub_ing">正在处理维修单数量</string>

    <string name="welcome_us">欢迎关注啄木鸟运维</string>
    <string name="com_phone">400-138-0089</string>
    <string name="com_address">郑东新区CBD商务外环与商务东一街格拉姆大厦A座27楼</string>

    <string name="repair_jindu">维修单进度</string>


    <string name="str_button1">设置闹钟</string>
    <string name="str_button2">删除闹钟</string>
    <string name="str_title1">起床闹钟</string>
    <string name="str_title2">非醒不可闹钟</string>
    <string name="str_default">目前无设置</string>
    <string name="str_text1">开始时间</string>
    <string name="str_text2">响铃延迟</string>
    <string name="str_text3">秒</string>
    <string name="hello">当前没有设置闹钟!</string>
    <string name="send_email">将投诉建议发至邮箱:zmnyw4001380089@163.com</string>

</resources>
